[refactor] Processed file - Makefile is refactored

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
 
                       cd ./SubscriptionsPlusServer
 
+                      export DB_URL=${{ secrets.PROD_DB_URL }}
+
+                      make migrate-up
+
                       git stash
                       git pull origin main
 
